@@ -2,6 +2,9 @@ All notable changes to this project will be documented in this file. For a
 complete changelog, see https://github.com/jollejolles/pirecorder/commits/
 
 Updates not yet in latest release:
+  * Integrated new overlay_stream function
+  * Number of fixes to zoom, gains, and calibrate functionalities
+  * Integrated rotation into calibrate function
 
 2019-12-23 - version 2.1.0
     A medium update with convert function now enabling folder monitoring, zoom
